# template-python

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  TEMPLATE.md  pyproject.toml
.github/workflows/: ci.yml.disabled
